--- a/css/style.css
+++ b/css/style.css
@@ -1007,3 +1007,13 @@ form {
 .btn-primary:hover {
     background-color: #0056b3; /* Darker background on hover */
 }
+
+
+.logonscet{
+
+    height: 70px;
+    width: auto;
+    
+
+
+}
