--- a/css/base.css
+++ b/css/base.css
@@ -38,10 +38,45 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	background-size: cover;
 	background-position: 50% 50%;
-	height: 100vh;
      
 }
+/* nav icon */
 
+.ham {
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+	transition: transform 400ms;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+  }
+  .hamRotate.active {
+	transform: rotate(45deg);
+  }
+  .hamRotate180.active {
+	transform: rotate(180deg);
+  }
+  .line {
+	fill:none;
+	transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+	stroke:#fff;
+	stroke-width:5.5;
+	stroke-linecap:round;
+  }
+  
+  .ham4 .top {
+	stroke-dasharray: 40 121;
+  }
+  .ham4 .bottom {
+	stroke-dasharray: 40 121;
+  }
+  .ham4.active .top {
+	stroke-dashoffset: -68px;
+  }
+  .ham4.active .bottom {
+	stroke-dashoffset: -68px;
+  }
 /* Page Loader */
 .js .loading::before,
 .js .loading::after {
@@ -129,10 +164,9 @@ a:focus-visible {
 	position: absolute;
 	width: 100%;
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
-	pointer-events: none;
-	align-items: start;
-	z-index: 999;
+	
 }
 
 body #cdawrap {
@@ -145,43 +179,38 @@ body #cdawrap {
 
 .frame__title {
 	grid-area: title;
-	display: flex;
-}
-
-.frame__title-main {
-	font-size: inherit;
-	margin: 0;
-	font-weight: inherit;
-}
-
-.frame__title-back {
 	position: relative;
+	flex-basis: 50%;
 	display: flex;
-	align-items: flex-end;
-	margin-bottom: 0.15rem;
+	justify-content: start;	
+	align-items: center;
 }
-
-.frame__title-back span {
-	display: none;
+.frame__title img{
+margin-left: 20px;
+width: 180px;
+height: 120px;
 }
-
-.frame__title-back svg {
-	fill: currentColor;
+.frame__title::before{
+	content: '';
+	position: absolute;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background: url('../img/BG/navleft.svg') no-repeat center/cover ;
 }
-
-.frame__prev {
-	grid-area: prev;
-}
-
 .frame__demos {
 	grid-area: demos;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 2rem;
+	gap: 2%;
 	position: relative;
 	background: url('../img/BG/navright.svg') no-repeat;
 	padding: 50px;
-
+	width: 100%;
+    justify-content: space-between;
+	z-index: 99;
+	cursor:  default;
 }
 
 .frame__demos-item:first-child {
@@ -198,9 +227,36 @@ body #cdawrap {
 }
 
 a.frame__demos-item {
-	font-weight: bold;
+	font-weight: bolder
 }
+.frame__demos-item {
+	font-size: clamp(12px, 2.5vw, 17px);
+	position: relative;
+	padding-bottom: 5px; 	
+  }
+  
+  .frame__demos-item::before {
+	content: '';
+	position: absolute;
+	left: 50%;
+	right: 50%;
+	bottom: 0;
+	
+	background: rgba(205, 188, 188);
+	height: 1px;
+	transition: 0.9s ease;
+  }
+  .frame__demos-item:hover::before{
+      left: 0;
+	  right: 0;
+  }
+  .new1 .frame__demos-item::before {
+	content: none;
+  }
+  
 
+
+  
 .content {
 	padding: 0 var(--page-padding);
 	display: flex;
@@ -245,20 +301,24 @@ a.frame__demos-item {
 	font-size: clamp(1.5rem,2vw,2rem);
 	font-variation-settings: "wght" 400, "opsz" 72, "ital" 0;
 	pointer-events: none;
+	color: rgba(205, 188, 188);
 }
 
 .cursor {
-	height: 100%;
-	position: fixed;
-	width: 100%;
-	left: 0;
-	top: 0;
-	pointer-events: none;
-	z-index: 99;
-	mix-blend-mode: var(--cursor-blend-mode);
-	--size: calc(100vw / var(--columns));
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    z-index: 99;
+    mix-blend-mode: var(--cursor-blend-mode);
+    --size: calc(100vw / var(--columns));
+    display: none; 
 }
-
+main:hover ~ .cursor{
+	display: block;
+}
 .cursor__inner {
 	display: grid;
 	grid-template-columns: repeat(var(--columns), var(--size));
@@ -271,7 +331,14 @@ a.frame__demos-item {
 	opacity: 0;
 	border-radius: var(--cursor-radius);
 }
-
+.robo-content{
+	position: absolute;
+	right: -85%;
+	top: 80px;
+	z-index: 9;
+	scale: 1.2;
+}
+#model-container { width: 100vw; height: 100vh; }
 @media screen and (min-width: 53em) {
 	:root {
 		--columns: 30;
@@ -313,17 +380,24 @@ a.frame__demos-item {
     font-family: "source-code-pro", monospace;
     border: 2px solid #cea167; 
     padding: 10px 10px; 
-    font-size: 15px; 
-    
+	font-size: clamp(12px, 2.5vw, 17px);    
     color: #fff;
     background-color: rgba(0, 0, 0, 0.4); 
     display: flex; 
     justify-content: center; 
     align-items: center; 
     transform: translate(-7px, 3px); 
-	
+	transition: transform 0.4s ease;
 }
 
+.new:hover .vutton-custine {
+	transform: translate(0px, 0px) scale(1.1); 
+
+
+}
+.new:hover .new1{
+	border: none;
+}
 .new1, .vutton-custine {
     border: 2px solid #cea167; 
     height: 45px; 
@@ -343,12 +417,52 @@ a.frame__demos-item {
 
 .up
 {
-
 	margin-top: -13px;
 }
+/* 3d content */
 
 @media  screen and (max-width:768px) {
 	.frame__demos{
 		display: none;
+		position: absolute;
+		flex-direction: column;
+		background: rgba(0, 0, 0, 0.8);
+        text-align: center;
+	}
+	.frame__demos-item{
+		font-size: clamp(18px,3vw,32px);
+		margin-bottom: 10px;
+	}
+	.up{
+		display: flex;
+		justify-content: center;
+		margin-top: 10px;
+	}
+	.vutton-custine{
+        border: none;
+		transform: translate(0,0);
+		background: none;
+	}
+	.new1{
+		border: none;
+	}
+	.new{
+		padding: 5px 20px;
+		border: 1px solid #cdbcbc;
+		background: #cea167;
+	}
+	.frame__demos-item::before{
+		animation: none;
+	}
+	.frame__title img{
+		width: 120px;
+		height: 90px;
+	}
+	.frame__title{
+		flex-basis:75% ;
+	}
+	.nav-icon{
+		display: block;
+		z-index: 9999;
 	}
 }
