--- a/css/base.css
+++ b/css/base.css
@@ -1,259 +1,5 @@
-*,
-*::after,
-*::before {
-	box-sizing: border-box;
-}
-
-:root {
-	font-size: 14px;
-	--color-text: #000;
-	--color-bg: #f2f1eb;
-	--color-link: #000;
-	--color-link-hover: #000;
-	--page-padding: 1rem;
-	--columns: 15;
-	--cursor-blend-mode: difference;
-	--cursor-radius: 0;
-}
-
-.demo-1 {
-	--color-text: #cdbcbc;
-	--color-bg: #000;
-	--color-link: #fff;
-	--color-link-hover: #fff;
-	--cursor-bg: #5cafc1;
-	--cursor-blend-mode: exclusion;
-	--gradient-text-1: #e8c942;
-	--gradient-text-2: rgb(148 98 209);
-	background: url(../img/BG/bg1.jpg) no-repeat center/cover ;
-	
-}
-
-body {
-	margin: 0;
-	color: var(--color-text);
-	background-color: var(--color-bg);
-	font-family: "source-code-pro", monospace;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background-size: cover;
-	background-position: 50% 50%;
-     
-}
-/* nav icon */
-
-.ham {
-	cursor: pointer;
-	-webkit-tap-highlight-color: transparent;
-	transition: transform 400ms;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-  }
-  .hamRotate.active {
-	transform: rotate(45deg);
-  }
-  .hamRotate180.active {
-	transform: rotate(180deg);
-  }
-  .line {
-	fill:none;
-	transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-	stroke:#fff;
-	stroke-width:5.5;
-	stroke-linecap:round;
-  }
-  
-  .ham4 .top {
-	stroke-dasharray: 40 121;
-  }
-  .ham4 .bottom {
-	stroke-dasharray: 40 121;
-  }
-  .ham4.active .top {
-	stroke-dashoffset: -68px;
-  }
-  .ham4.active .bottom {
-	stroke-dashoffset: -68px;
-  }
-/* Page Loader */
-.js .loading::before,
-.js .loading::after {
-	content: '';
-	position: fixed;
-	z-index: 1000;
-}
-
-.js .loading::before {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: var(--color-bg);
-}
-
-.js .loading::after {
-	top: 50%;
-	left: 50%;
-	width: 60px;
-	height: 60px;
-	margin: -30px 0 0 -30px;
-	border-radius: 50%;
-	opacity: 0.4;
-	background: var(--color-link);
-	animation: loaderAnim 0.7s linear infinite alternate forwards;
-
-}
-
-@keyframes loaderAnim {
-	to {
-		opacity: 1;
-		transform: scale3d(0.5,0.5,1);
-	}
-}
-
-a {
-	text-decoration: none;
-	color: var(--color-link);
-	outline: none;
-	cursor: pointer;
-}
-
-a:hover {
-	color: var(--color-link-hover);
-	outline: none;
-}
-
-/* Better focus styles from https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-visible */
-a:focus {
-	/* Provide a fallback style for browsers
-	 that don't support :focus-visible */
-	outline: none;
-	background: lightgrey;
-}
-
-a:focus:not(:focus-visible) {
-	/* Remove the focus indicator on mouse-focus for browsers
-	 that do support :focus-visible */
-	background: transparent;
-}
-
-a:focus-visible {
-	/* Draw a very noticeable focus style for
-	 keyboard-focus on browsers that do support
-	 :focus-visible */
-	outline: 2px solid red;
-	background: transparent;
-}
-
-.unbutton {
-	background: none;
-	border: 0;
-	padding: 0;
-	margin: 0;
-	font: inherit;
-	cursor: pointer;
-}
-
-.unbutton:focus {
-	outline: none;
-}
-
-.frame {
-	position: absolute;
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	
-}
-
-body #cdawrap {
-    justify-self: start;
-}
-
-.frame a {
-	pointer-events: auto;
-}
-
-.frame__title {
-	grid-area: title;
-	position: relative;
-	flex-basis: 45%;
-	display: flex;
-	justify-content: start;	
-	align-items: center;
-}
-.frame__title img{
-margin-left: 20px;
-width: 180px;
-height: 120px;
-}
-.frame__title::before{
-	content: '';
-	position: absolute;
-	left: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	background: url('../img/BG/navleft.svg') no-repeat center/cover ;
-}
-.frame__demos {
-	grid-area: demos;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 2%;
-	position: relative;
-	background: url('../img/BG/navright.svg') no-repeat;
-	padding: 50px;
-	width: 100%;
-    justify-content: space-between;
-	z-index: 99;
-	cursor:  default;
-}
-
-.frame__demos-item:first-child {
-	width: 100%;
-}
-.nav-icon{
-	display: none;
-}
-.frame__demos span{
-	
-	color: var(--color-link);
-	
-	font-weight: bold;
-}
-
-a.frame__demos-item {
-	font-weight: bolder
-}
-.frame__demos-item {
-	font-size: clamp(12px, 2.5vw, 17px);
-	position: relative;
-	padding-bottom: 5px; 	
-  }
-  
-  .frame__demos-item::before {
-	content: '';
-	position: absolute;
-	left: 50%;
-	right: 50%;
-	bottom: 0;
-	
-	background: rgba(205, 188, 188);
-	height: 1px;
-	transition: 0.9s ease;
-  }
-  .frame__demos-item:hover::before{
-      left: 0;
-	  right: 0;
-  }
-  .new1 .frame__demos-item::before {
-	content: none;
-  }
-  
+@import url("./nav.css");
+@import url("./footer.css");
 
 
   
