--- a/css/nav.css
+++ b/css/nav.css
@@ -321,3 +321,49 @@ a.frame__demos-item {
 	}
 	
   }
+  @media  screen and (max-width:768px) {
+	  .frame__demos{
+		  display: none;
+		  position: absolute;
+		  flex-direction: column;
+		  background: rgba(0, 0, 0, 0.8);
+		  text-align: center;
+	  }
+	  .frame__demos-item{
+		  font-size: clamp(18px,3vw,32px);
+		  margin-bottom: 10px;
+	  }
+	  .up{
+		  display: flex;
+		  justify-content: center;
+		  margin-top: 10px;
+	  }
+	  .vutton-custine{
+		  border: none;
+		  transform: translate(0,0);
+		  background: none;
+	  }
+	  .new1{
+		  border: none;
+	  }
+	  .new{
+		  padding: 5px 20px;
+		  border: 1px solid #cdbcbc;
+		  background: #cea167;
+	  }
+	  .frame__demos-item::before{
+		  animation: none;
+	  }
+	  .frame__title img{
+		  width: 100px;
+		  height: 80px;
+	  }
+	  .frame__title{
+		  flex-basis:75% ;
+		  height: 80px;
+	  }
+	  .nav-icon{
+		  display: block;
+		  z-index: 9999;
+	  }
+  }
